tests/fail/ip6.rs
use net_macros::ip6;

fn main() {
    let a = ip6!("2001:db8::32::23");
}
